Prevent flexbox from being squashed

--- a/resources/assets/less/bem/quick-search-result.less
+++ b/resources/assets/less/bem/quick-search-result.less
@@ -29,5 +29,6 @@
     margin: 15px 0;
     display: flex;
     flex-direction: column;
+    flex: none;
   }
 }
